load("@npm//@vue/cli-service:index.bzl", "vue_cli_service")

vue_cli_service(
    name = "serve",
    args = ["serve"],
    data = [
        ":babel.config.js",
        ":package.json",
        ":tsconfig.json",
        ":vue.config.js",
        ":.env",
        "//src",
    ],
)

vue_cli_service(
    name = "build",
    outs = ["dist"],
    args = [
        "build",
        "--dest",
        "$(@D)/dist",
        "--skip-plugins",
        "eslint",
    ],
    data = [
        ":babel.config.js",
        ":package.json",
        ":tsconfig.json",
        ":vue.config.js",
        "//src",
        "@npm//axios",
        "@npm//element-ui",
        "@npm//js-cookie",
        "@npm//normalize.css",
        "@npm//nprogress",
        "@npm//path-to-regexp",
        "@npm//register-service-worker",
        "@npm//vue",
        "@npm//vue-class-component",
        "@npm//vue-property-decorator",
        "@npm//vue-router",
        "@npm//vue-svgicon",
        "@npm//vuex",
        "@npm//vuex-module-decorators",
        "@npm//sass-loader",
        "@npm//style-resources-loader",
        "@npm//@types/js-cookie",
        "@npm//@types/nprogress",
        "@npm//@vue/cli-plugin-babel",
        "@npm//@vue/cli-plugin-eslint",
        "@npm//@vue/cli-plugin-pwa",
        "@npm//@vue/cli-plugin-router",
        "@npm//@vue/cli-plugin-typescript",
        "@npm//@vue/cli-plugin-unit-jest",
        "@npm//@vue/cli-plugin-vuex",
        "@npm//vue-cli-plugin-element",
        "@npm//vue-cli-plugin-style-resources-loader",
    ],
)
